--- a/elf/Makefile
+++ b/elf/Makefile
@@ -40,7 +40,7 @@ distribute	= $(rtld-routines:=.c) dynamic-link.h do-rel.h dl-machine.h \
 		  genrtldtbl.awk atomicity.h dl-procinfo.h ldsodefs.h \
 		  dl-librecon.h interp.c sln.c dl-origin.h hp-timing.h \
 		  testobj1.c testobj2.c testobj3.c testobj4.c testobj5.c \
-		  testobj6.c testobj1_1.c failobj.c
+		  testobj6.c testobj1_1.c failobj.c do-lookup.h
 
 include ../Makeconfig
 
