--- a/debug/Makefile
+++ b/debug/Makefile
@@ -1,4 +1,4 @@
-# Copyright (C) 1998 Free Software Foundation, Inc.
+# Copyright (C) 1998, 1999 Free Software Foundation, Inc.
 # This file is part of the GNU C Library.
 
 # The GNU C Library is free software; you can redistribute it and/or
@@ -40,7 +40,9 @@ include ../Makeconfig
 
 distribute += catchsegv.sh
 ifeq ($(elf),yes)
+ifeq ($(build-shared),yes)
 install-bin = catchsegv
+endif
 endif
 generated = catchsegv
 
