--- a/grp/Makefile
+++ b/grp/Makefile
@@ -1,4 +1,4 @@
-# Copyright (C) 1991, 1992, 1996, 1997, 1998 Free Software Foundation, Inc.
+# Copyright (C) 1991, 1992, 1996, 1997, 1998, 1999  Free Software Foundation, Inc.
 # This file is part of the GNU C Library.
 
 # The GNU C Library is free software; you can redistribute it and/or
@@ -29,6 +29,12 @@ routines := fgetgrent initgroups setgroups \
 tests := testgrp
 
 include ../Rules
+
+ifeq (yes,$(build-static-nss))
+otherlibs += $(nssobjdir)/libnss_files.a $(resolvobjdir)/libnss_dns.a \
+	     $(resolvobjdir)/libresolv.a
+endif
+
 
 ifeq ($(have-thread-library),yes)
 
