--- a/elf/Makefile
+++ b/elf/Makefile
@@ -77,7 +77,9 @@ others		+= ldconfig
 install-rootsbin += ldconfig
 endif
 
+ifeq (yes,$(build-shared))
 tests = loadtest restest1 preloadtest loadfail multiload
+endif
 modules-names = testobj1 testobj2 testobj3 testobj4 testobj5 testobj6 \
 		testobj1_1 failobj
 extra-objs += $(modules-names:=.os)
