1999-03-23  Roland McGrath  <roland@baalperazim.frob.com>
	* sysdeps/mach/hurd/Makefile: Undo last change.
	[$(subdir) = mach] (lib-noranlib): Depend on libmachuser-link.so.
	[$(subdir) = hurd] (lib-noranlib): Depend on libhurduser-link.so.

	* mach/Machrules (+preinit, +postinit, +interp,
	LDFLAGS-$(interface.so)): Variables removed.  Interface libraries get
	linked just like other shared libraries.
	(interface.so): Fix typo in defn, so it works.
	($(objpfx)$(interface.so)): Make it depend on libc.so.

--- a/sysdeps/mach/hurd/Makefile
+++ b/sysdeps/mach/hurd/Makefile
@@ -133,8 +133,17 @@ endif
 rpcuserlibs := $(common-objpfx)mach/libmachuser.so \
 	       $(common-objpfx)hurd/libhurduser.so
 link-rpcuserlibs := $(rpcuserlibs:%user.so=%user-link.so)
-$(common-objpfx)libc.so subdir_lib: $(link-rpcuserlibs)
+$(common-objpfx)libc.so: $(link-rpcuserlibs)
 rpath-dirs += mach hurd
+
+# Make sure the `lib' pass builds the dummy shared objects so
+# we can link libc against them.
+ifeq (mach,$(subdir))
+lib-noranlib: $(common-objpfx)mach/libmachuser-link.so
+endif
+ifeq (hurd,$(subdir))
+lib-noranlib: $(common-objpfx)hurd/libhurduser-link.so
+endif
 
 $(link-rpcuserlibs): %-link.so: %_pic.a
 	$(build-module) -nostdlib -Wl,-soname=$(*F).so$($(*F).so-version)
