1999-03-26  Mark Kettenis  <kettenis@gnu.org>
* sysdeps/mach/hurd/bits/time.h: New file. 
* sysdeps/mach/hurd/getrusage.c: New file. 
* sysdeps/mach/hurd/clk_tck.c: New file. 
* sysdeps/mach/hurd/Versions (libc) [GLIBC_2.1.1]: Add __libc_clk_tck. 
* sysdeps/mach/hurd/Makefile [$(subdir) = posix] 
(sysdep_routines): Add clk_tck. 
* sysdeps/mach/hurd/times.c: Removed, since getrusage is now 
implemented.

--- a/sysdeps/mach/hurd/Makefile
+++ b/sysdeps/mach/hurd/Makefile
@@ -183,4 +183,8 @@ ifeq (hurd, $(subdir))
 sysdep_routines += cthreads
 endif
 
+ifeq (posix, $(subdir))
+sysdep_routines += clk_tck
+endif
+
 endif	# in-Makerules
