1999-04-01  Thorsten Kukuk  <kukuk@suse.de>
	* sunrpc/Versions: Add new xdr functions to GLIBC_2.1.1
	* sunrpc/xdr.c: Add xdr_hyper, xdr_u_hyper, xdr_longlong_t and
	xdr_u_longlong_t. Based on patch from Dan Shechter
	<damageboy@isdn.net.il>.
	* sunrpc/xdr_intXX_t.c: Implement xdr_int64_t, xdr_uint64_t
	* sunrpc/rpc/xdr.h: Add prototypes for new xdr functions.

	* nis/nis_lookup.c (nis_lookup): Don't overwrite RPC error code.

--- a/FAQ.in
+++ b/FAQ.in
@@ -641,7 +641,7 @@ copy a NIS_COLD_START file from a Solaris client (the NIS_COLD_START file is
 byte order independent) or generate it with nisinit from the nis-tools
 package; available at
 
-    http://www-vt.uni-paderborn.de/~kukuk/linux/nisplus.html
+    http://www.suse.de/~kukuk/linux/nisplus.html
 
 ??	I have killed ypbind to stop using NIS, but glibc
 	continues using NIS.
@@ -1422,7 +1422,7 @@ Answers were given by:
 {PB} Phil Blundell, <Philip.Blundell@pobox.com>
 {MK} Mark Kettenis, <kettenis@phys.uva.nl>
 {ZW} Zack Weinberg, <zack@rabi.phys.columbia.edu>
-{TK} Thorsten Kukuk, <kukuk@vt.uni-paderborn.de>
+{TK} Thorsten Kukuk, <kukuk@suse.de>
 {GK} Geoffrey Keating, <geoffk@ozemail.com.au>
 {HJ} H.J. Lu, <hjl@gnu.org>
 {CG} Cristian Gafton, <gafton@redhat.com>
