[$(subdir) = signal] (sysdep_routines): Add sigrestorer.

--- a/sysdeps/unix/sysv/linux/arm/Makefile
+++ b/sysdeps/unix/sysv/linux/arm/Makefile
@@ -4,5 +4,6 @@ endif
 
 ifeq ($(subdir),signal)
 sysdep_routines += rt_sigsuspend rt_sigprocmask rt_sigtimedwait	\
-		   rt_sigqueueinfo rt_sigaction rt_sigpending
+		   rt_sigqueueinfo rt_sigaction rt_sigpending \
+		   sigrestorer
 endif
