Sparc merge from Jakub.
1999-04-14  Jakub Jelinek  <jj@ultra.linux.cz>

	* scripts/config.sub: Allow sparcv[6789]-* and sparcv8plus{,a}-*
	architectures.
	* sysdeps/sparc/sparc32/sparcv8/Makefile: Use sysdep-CFLAGS
	instead of CFLAGS.
	* sysdeps/sparc/sparc32/sparcv8/Makefile: Use sysdep-CFLAGS
	instead of CFLAGS. For gnulib and string directories use
	-Wa,-Av9a gcc ASFLAGS.
	* sysdeps/sparc/sparc32/sparcv9/memmove.c: New file.
	* sysdeps/unix/sysv/linux/sparc/sparc32/dl-procinfo.h: New file.
	* sysdeps/unix/sysv/linux/sparc/sparc64/dl-procinfo.h: New file.
	* shlib-versions: Handle sparcv[6789]-* and sparcv8plus{,a}-*
	the same way as sparc-*.

--- a/sysdeps/sparc/sparc32/sparcv9/Makefile
+++ b/sysdeps/sparc/sparc32/sparcv9/Makefile
@@ -1,1 +1,10 @@
-CFLAGS += -mv8 -mtune=ultrasparc
+sysdep-CFLAGS += -mv8 -mtune=ultrasparc
+
+ifeq ($(subst gnulib,string,$(subdir)),string)
+ASFLAGS-.o += -Wa,-Av9a
+ASFLAGS-.os += -Wa,-Av9a
+ASFLAGS-.op += -Wa,-Av9a
+ASFLAGS-.og += -Wa,-Av9a
+ASFLAGS-.ob += -Wa,-Av9a
+ASFLAGS-.oS += -Wa,-Av9a
+endif
