--- a/sysdeps/unix/sysv/linux/Makefile
+++ b/sysdeps/unix/sysv/linux/Makefile
@@ -97,7 +97,7 @@ endif
 inhibit-glue = yes
 
 ifeq ($(subdir),dirent)
-sysdep_routines += getdents64
+sysdep_routines += getdents64 getdirentries getdirentries64
 endif
 
 ifeq ($(subdir),nis)
