--- a/FAQ.in
+++ b/FAQ.in
@@ -151,7 +151,8 @@ Binutils 2.9.1.0.16 or later is also required.
   as much as 400MB).
 
 * plenty of time.  Compiling just the shared and static libraries for
-  i?86-linux takes approximately 1h on an AMD-K6@225MHz w/ 96MB of RAM.
+  i?86-linux takes approximately 1h on an AMD-K6@225MHz w/ 96MB of RAM,
+  45mins on a Celeron@400MHz w/ 128MB, and 55mins on a Alpha@533MHz w/ 256MB.
   Multiply this by 1.5 or 2.0 if you build profiling and/or the highly
   optimized version as well.  For Hurd systems times are much higher.
 
