--- a/sysdeps/unix/sysv/linux/sparc/sparc32/Makefile
+++ b/sysdeps/unix/sysv/linux/sparc/sparc32/Makefile
@@ -9,6 +9,8 @@ endif
 ifeq ($(subdir),elf)
 CFLAGS-rtld.c += -mv8
 #rtld-routines += dl-sysdepsparc
+sysdep-others += lddlibc4
+install-bin += lddlibc4
 endif   # elf
 
 ifeq ($(subdir),signal)
